--- a/package.json
+++ b/package.json
@@ -127,9 +127,8 @@
     }
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.57.4"
-  },
-  "devDependencies": {
-    "@wshcmx/types": "^12.0.0"
+    "@supabase/supabase-js": "^2.57.4",
+    "axios": "^1.12.2",
+    "vscode": "^1.1.37"
   }
 }
